[gd_scene load_steps=3 format=2]

[ext_resource path="res://tile.png" type="Texture" id=1]
[ext_resource path="res://GUI.gd" type="Script" id=2]

[node name="GUI" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="."]
margin_left = 125.0
margin_top = 295.0
margin_right = 475.0
margin_bottom = 729.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 343.0
margin_bottom = 427.0

[node name="Left" type="CenterContainer" parent="Panel/HBoxContainer"]
margin_right = 200.0
margin_bottom = 420.0
rect_min_size = Vector2( 200, 0 )

[node name="VBox" type="VBoxContainer" parent="Panel/HBoxContainer/Left"]
margin_left = 31.0
margin_right = 169.0
margin_bottom = 420.0
custom_constants/separation = 20

[node name="Statistics" type="GridContainer" parent="Panel/HBoxContainer/Left/VBox"]
margin_right = 138.0
margin_bottom = 133.0
custom_constants/vseparation = 20
custom_constants/hseparation = 10
columns = 2

[node name="_HighScore" type="Label" parent="Panel/HBoxContainer/Left/VBox/Statistics"]
margin_right = 72.0
margin_bottom = 14.0
text = "High Score:"

[node name="HighScore" type="Label" parent="Panel/HBoxContainer/Left/VBox/Statistics"]
margin_left = 82.0
margin_right = 138.0
margin_bottom = 14.0
text = "9999999"

[node name="_Level" type="Label" parent="Panel/HBoxContainer/Left/VBox/Statistics"]
margin_top = 34.0
margin_right = 72.0
margin_bottom = 48.0
text = "Level:"

[node name="Level" type="Label" parent="Panel/HBoxContainer/Left/VBox/Statistics"]
margin_left = 82.0
margin_top = 34.0
margin_right = 138.0
margin_bottom = 48.0
text = "1"

[node name="_Score" type="Label" parent="Panel/HBoxContainer/Left/VBox/Statistics"]
margin_top = 68.0
margin_right = 72.0
margin_bottom = 82.0
text = "Score:"

[node name="Score" type="Label" parent="Panel/HBoxContainer/Left/VBox/Statistics"]
margin_left = 82.0
margin_top = 68.0
margin_right = 138.0
margin_bottom = 82.0
text = "0"

[node name="_Lines" type="Label" parent="Panel/HBoxContainer/Left/VBox/Statistics"]
margin_top = 110.0
margin_right = 72.0
margin_bottom = 124.0
text = "Lines:"

[node name="Lines" type="Label" parent="Panel/HBoxContainer/Left/VBox/Statistics"]
margin_left = 82.0
margin_top = 102.0
margin_right = 138.0
margin_bottom = 133.0
text = "0
"

[node name="CenterContainer" type="CenterContainer" parent="Panel/HBoxContainer/Left/VBox"]
margin_top = 153.0
margin_right = 138.0
margin_bottom = 260.0

[node name="NextShape" type="GridContainer" parent="Panel/HBoxContainer/Left/VBox/CenterContainer"]
margin_left = 42.0
margin_right = 95.0
margin_bottom = 107.0
custom_constants/vseparation = 1
custom_constants/hseparation = 1
columns = 2

[node name="Cell" type="TextureRect" parent="Panel/HBoxContainer/Left/VBox/CenterContainer/NextShape"]
margin_right = 26.0
margin_bottom = 26.0
texture = ExtResource( 1 )

[node name="Cell2" type="TextureRect" parent="Panel/HBoxContainer/Left/VBox/CenterContainer/NextShape"]
margin_left = 27.0
margin_right = 53.0
margin_bottom = 26.0
texture = ExtResource( 1 )

[node name="Cell3" type="TextureRect" parent="Panel/HBoxContainer/Left/VBox/CenterContainer/NextShape"]
margin_top = 27.0
margin_right = 26.0
margin_bottom = 53.0
texture = ExtResource( 1 )

[node name="Cell4" type="TextureRect" parent="Panel/HBoxContainer/Left/VBox/CenterContainer/NextShape"]
margin_left = 27.0
margin_top = 27.0
margin_right = 53.0
margin_bottom = 53.0
texture = ExtResource( 1 )

[node name="Cell5" type="TextureRect" parent="Panel/HBoxContainer/Left/VBox/CenterContainer/NextShape"]
margin_top = 54.0
margin_right = 26.0
margin_bottom = 80.0
texture = ExtResource( 1 )

[node name="Cell6" type="TextureRect" parent="Panel/HBoxContainer/Left/VBox/CenterContainer/NextShape"]
margin_left = 27.0
margin_top = 54.0
margin_right = 53.0
margin_bottom = 80.0
texture = ExtResource( 1 )

[node name="Cell7" type="TextureRect" parent="Panel/HBoxContainer/Left/VBox/CenterContainer/NextShape"]
margin_top = 81.0
margin_right = 26.0
margin_bottom = 107.0
texture = ExtResource( 1 )

[node name="Cell8" type="TextureRect" parent="Panel/HBoxContainer/Left/VBox/CenterContainer/NextShape"]
margin_left = 27.0
margin_top = 81.0
margin_right = 53.0
margin_bottom = 107.0
texture = ExtResource( 1 )

[node name="NewGame" type="Button" parent="Panel/HBoxContainer/Left/VBox"]
margin_top = 280.0
margin_right = 138.0
margin_bottom = 300.0
text = "New Game"

[node name="Pause" type="Button" parent="Panel/HBoxContainer/Left/VBox"]
margin_top = 320.0
margin_right = 138.0
margin_bottom = 340.0
text = "Pause"

[node name="Music" type="Button" parent="Panel/HBoxContainer/Left/VBox"]
margin_top = 360.0
margin_right = 138.0
margin_bottom = 380.0
text = "Music On/Off"

[node name="About" type="Button" parent="Panel/HBoxContainer/Left/VBox"]
margin_top = 400.0
margin_right = 138.0
margin_bottom = 420.0
text = "About"

[node name="Right" type="MarginContainer" parent="Panel/HBoxContainer"]
margin_left = 204.0
margin_right = 336.0
margin_bottom = 420.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Grid" type="GridContainer" parent="Panel/HBoxContainer/Right"]
margin_left = 8.0
margin_top = 8.0
margin_right = 124.0
margin_bottom = 412.0
columns = 10

[node name="Cell" type="TextureRect" parent="Panel/HBoxContainer/Right/Grid"]
margin_right = 26.0
margin_bottom = 26.0
texture = ExtResource( 1 )

[node name="Cell2" type="TextureRect" parent="Panel/HBoxContainer/Right/Grid"]
margin_left = 30.0
margin_right = 56.0
margin_bottom = 26.0
texture = ExtResource( 1 )

[node name="Cell3" type="TextureRect" parent="Panel/HBoxContainer/Right/Grid"]
margin_left = 60.0
margin_right = 86.0
margin_bottom = 26.0
texture = ExtResource( 1 )

[node name="Cell4" type="TextureRect" parent="Panel/HBoxContainer/Right/Grid"]
margin_left = 90.0
margin_right = 116.0
margin_bottom = 26.0
texture = ExtResource( 1 )

[node name="AboutBox" type="AcceptDialog" parent="."]
margin_left = 28.0
margin_top = 398.0
margin_right = 571.0
margin_bottom = 626.0
window_title = "Tetron"
dialog_text = "Space bar - Hard drop
Down arrow - Soft drop
Left arrow - move left
Right arrow - move right
Up arrow - rotate clockwise
Shift + Up arrow - rotate anti-clockwise
Page Up - increase level on each press
New Game button
Pause button
Music On/Off button
About button - pop's up a window to show the above info. about the game controls"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="Panel/HBoxContainer/Left/VBox/NewGame" to="." method="_on_New_Game_button_down"]
[connection signal="button_down" from="Panel/HBoxContainer/Left/VBox/Pause" to="." method="_on_Pause_button_down"]
[connection signal="button_down" from="Panel/HBoxContainer/Left/VBox/Music" to="." method="_on_Music_button_down"]
[connection signal="button_down" from="Panel/HBoxContainer/Left/VBox/About" to="." method="_on_About_button_down"]
